<resources>
    <string name="app_name">FootballBlog</string>
    <string name="related_posts">Related Posts</string>
    <string name="action_share">Share</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_home">Home</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_interests">Interests</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Bookmarks</item>
        <item>Interests</item>
        <item>Settings</item>
    </string-array>

    <string name="tag_list_item">#%s (%d)</string>
    <string name="categories_list_item">%s (%d)</string>
    <string name="btn_following">Following</string>
    <string name="btn_follow">Follow</string>
    <string name="action_filter">filter</string>
    <string name="action_search">Search</string>
    <string name="action_all_posts">All Posts</string>
    <string name="cancelled">Cancelled</string>
    <string name="action_clear_search">Clear Search</string>
    <string name="pref_summary_default_notification">Whistle</string>
    <string name="pref_title_clear_search_history">Clear Search History</string>
    <string name="pref_clear_search_history_dialog_message">Are you sure you want to delete all your search history?</string>
    <string name="nav_title_help_and_support">Help and Support</string>
    <string name="nav_title_send_feedback">Send Feedback</string>
    <string name="nav_title_categories">Categories</string>
    <string name="btn_login">Login</string>
    <string name="nav_header_view_profile">View Profile</string>
    <string name="nav_title_tags">Tags</string>
    <string name="nav_title_your_posts">Your Posts</string>
    <string name="nav_title_all_posts">All Posts</string>
    <string name="nav_title_account">Account</string>
    <string name="nav_title_your_drafts">Your Drafts</string>
    <string name="nav_title_posts_liked_by_you">Posts Liked by You</string>
    <string name="nav_title_your_bookmarks">Your Bookmarks</string>
    <string name="nav_title_your_interests">Your Interests</string>

</resources>
