<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/nav_title_categories"/>
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/nav_bookmarks" />
        <item
            android:id="@+id/nav_interests"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_interests" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_title_help_and_support" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_title_send_feedback" />

    </group>

</menu>